# libpartialzip

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  libpartialzip-1.0.pc  libtool
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
include/: Makefile  Makefile.in
include/libpartialzip-1.0/: libpartialzip.h
src/: Makefile  Makefile.am  Makefile.in  libpartialzip-1.0.la  libpartialzip.c  libpartialzip_1_0_la-libpartialzip.lo
src/.deps/: libpartialzip_1_0_la-libpartialzip.Plo
src/.libs/: libpartialzip-1.0.la  libpartialzip-1.0.lai  libpartialzip-1.0.so.0.0.0
tools/: Makefile  Makefile.in  partialzip  partialzip.c
tools/.deps/: partialzip-partialzip.Po
tools/.libs/: partialzip
